Update from day to session.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@ layout: page
 <article>
 	  
 
-  <p>The idea of the Gaussian process summer school is to bring together students interested in developing their knowledge in one location for introduction and advanced discussion of the issues in Gaussian process modelling.</p>
+  <p>{{ site.tagline }}</p>
      
   
   {{ content }}
