--- a/_includes/listperson.html
+++ b/_includes/listperson.html
@@ -1,1 +1,1 @@
-{% if person.url %}<a href="{{ person.url }}">{% endif %}{{ person.name }}{% if person.url %}</a>{% endif %} {{ person.institute }}{% unless person == lastone %}, {% endunless %}
+{% if person.url %}<a href="{{ person.url }}">{% endif %}{{ person.name }}{% if person.url %}</a>{% endif %}{% if person.institute %} {{ person.institute }}{% endif %}{% unless person == lastone %}, {% endunless %}
