--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.conference.venue }}, {{ site.conference.location}}</li>
+          <li>{% if site.conference.room %}{{ site.conference.room }}, {% endif %}{{ site.conference.venue }}, {{ site.conference.location}}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
