--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -11,26 +11,21 @@ title: Program
  
   {{ content }}
   
-    <ul>
-  {% for post in site.posts reversed %}
-  {% if post.layout == "workshop"%}
-  <li style='margin-bottom:0.5em'><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a> ({% if post.organizers %}{% for organizer in post.organizers %}{% if organizer.url %}<a href="{{ organizer.url }}">{% endif %}{{ organizer.firstname }} {{ organizer.lastname }}{% if organizer.url %}</a>{% endif %}{% if post.organizers | size>1 %}, {% endif %}{% endfor %}{% endif %} {{ post.date | date: "%A, %B %-d" }})<br>Room: <b>{{ post.room }}</b></li>
-  {% endif %}
-  {% endfor %}
-    </ul>
+  <ul>
+    {% for post in site.posts reversed %}
+    {% if post.layout == "multitrack"%}
+    {% include listmulti.html %}
+    {% endif %}
+    {% endfor %}
 
-  <br>
     
-  {% for post in site.posts reversed %}
-  {% if post.layout == "session" %}
-  <br>    
-  <p><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.date | date: "%A, %B %-d" }}</a>  <i>{{ post.tagline }}</i> </p>
-  
-  {% for talk in post.talks %}
-  {% include talk.html %}
-  {% endfor %}
-  {% endif %}
-  {% endfor %}
+    {% for post in site.posts reversed %}
+    {% if post.layout == "singletrack" %}
+    {% include listsingle.html %}
+    {% endif %}
+    {% endfor %}
+
+  </ul>
 
   
 </article>
