--- a/_layouts/getting_there.html
+++ b/_layouts/getting_there.html
@@ -3,7 +3,7 @@ layout: page
 ---	  
 
 {% if site.conference.room %}
-The {{site.conference.year }} {{ site.conference.name }} will take place in {{ site.conference.room }}, {{ site.conference.location }}.
+The {{site.conference.year }} {{ site.conference.name }} will take place in {{ site.conference.room }}, {{ site.conference.venue }}, {{ site.conference.location }}.
 {% endif %}
 
 {{ content }}
