--- a/_layouts/singletrack.html
+++ b/_layouts/singletrack.html
@@ -5,6 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    {% include edit_link.html %}
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.tagline %} • {{ page.tagline }}{% endif %}</p>
     
   </header>
@@ -18,9 +19,9 @@ layout: default
     {{ content }}
 
     {% for post in site.posts reversed %}
-    {% unless post.layout == "session" %}
+    {% unless post.layout == "singletrack" %}
     {% if post.date == page.date %}
-    <p><a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a></p>
+    <p><a href="{{ site.url }}/{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a></p>
     {% endif %}
     {% endunless %}
     {% endfor %}
