--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,30 +4,24 @@ layout: page
 
 <article>
 	  
-
-  <p>The idea of DALI is to combine the special qualities of the former Snowbird meetings (intimate atmosphere, very good people, plenty of time to interact) with positive aspects of larger conferences that rarely take place in Europe. We decided for a three day format with two days of workshops, and one day of plenary talks in the middle, including a poster session. We chose an attractive location in a nearby time zone, which limits travel times for many of us who normally travel to meetings in the US. We have initially circulated this link only to a small list of people with the hope that we can bootstrap it into a high quality meeting of size around 50-100. If you haven't been contacted yet, but you'd like to attend, please e-mail us.</p>
- 
-    
-  <p>The date is chosen to allow combining it with a family vacation. </p>
-    
-  <p><strong>{{ }} will take place in {{ site.conference.location }} from {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.</strong></p>
+  <p><strong>{{ site.conference.name }} will take place in {{ site.conference.location }} from {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.</strong></p>
   
   {{ content }}
     
   
+  {% if site.conference.sponsors %}
   <p><strong>Sponsors</strong></p>
 
-  {% if site.conference.sponsors %}
   <p>This event is sponsored and co-organized by
   {% for sponsor in site.conference.sponsors %}
   <br>{% include listsponsor.html %}</br>
   {% endfor %}
-  {% endif %}
   </p>
-
-  <p><strong>Organizers</strong></p>
+  {% endif %}
 
   {% if site.conference.organizers %}
+  <p><strong>Organizers</strong></p>
+
   {% assign lastone = site.conference.organizers | last %}
   {% for person in site.conference.organizers %}
   {% include listperson.html %}
