--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -7,7 +7,7 @@ title: Program
 <article>
 
   {% if site.conference.draft %}
-  <h2>Draft Version</h2>
+  <h3><i>Draft Version</i></h3>
   {% endif %}
  
   {{ content }}
