--- a/_includes/listsingle.html
+++ b/_includes/listsingle.html
@@ -1,4 +1,4 @@
-<li><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.date | date: "%A, %B %-d" }}</a>  <i>{{ post.tagline }}</i> 
+<li ><a class="post-link"  href="{{ post.url | prepend: site.baseurl }}">{{ post.title }} {{ post.date | date: "%A, %B %-d" }}</a>  <i class="post-link" >{{ post.tagline }}</i> 
 
 {% for talk in post.talks %}
 {% include listtalk.html %}
