Update with new author format

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,11 +8,11 @@ layout: page
   
   {{ content }}
     
-  
-  {% if site.conference.sponsors %}
+  {% assign sponsorlen = {{ site.conference.sponsors | size }} %}
+  {% if sponsorlen > 0 %}
   <p><strong>Sponsors</strong></p>
 
-  <p>This event is sponsored and co-organized by
+  <p>This event is sponsored by
   {% for sponsor in site.conference.sponsors %}
   <br>{% include listsponsor.html %}</br>
   {% endfor %}
