--- a/_layouts/multitrack.html
+++ b/_layouts/multitrack.html
@@ -9,6 +9,8 @@ layout: default
       
     <p class="post-meta">({% if page.organizers %}{% assign lastone = page.organizers | last %}{% for person in page.organizers %}{% include listperson.html %}{% endfor %}{% endif %} {{ page.date | date: "%b %-d" }})</p>
   </header>
+	
+	
 
   <article class="post-content">
     <p>{% if page.organizer_url %}<a href="{{ page.organizer_url }}">Organizer's workshop page</a>{% endif %}</p>
@@ -18,7 +20,11 @@ layout: default
     {% elsif site.conference.room %}
     <h3>Room: {{ site.conference.room }}</h3>
     {% endif %}
-      
+    
+    {% if page.abstract %}
+	{{page.abstract}}
+    {% endif %}	  
+	  
     {% if page.speakers %}
     <p>
         Speakers:
@@ -47,7 +53,7 @@ layout: default
         {% if talk.abstract or talk.bio %}
 
         <br>
-<h4 id='{{talk.speaker}}' style='margin-bottom:0'><b>{{ talk.title }}</b></h4>
+<h4 id='{{talk.title  | remove: ' ' | remove: ':' }}' style='margin-bottom:0'><b>{{ talk.title }}</b></h4>
             {{ talk.speaker }}
 
             {% if talk.abstract %}
