--- a/_layouts/singletrack.html
+++ b/_layouts/singletrack.html
@@ -44,7 +44,7 @@ layout: default
         {% if talk.abstract %}
 
         <br>
-<h4 id='{{talk.speaker}}' style='margin-bottom:0'><b>{{ talk.title }}</b></h4>
+<h4 id='{{ talk.title | remove: ' ' | remove: ':' }}' style='margin-bottom:0'><b>{{ talk.title }}</b></h4>
             {{ talk.speaker }}
 
 
