--- a/_layouts/singletrack.html
+++ b/_layouts/singletrack.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    {% include edit_link.html %}
+<!--    {% include edit_link.html %}-->
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.tagline %} • {{ page.tagline }}{% endif %}</p>
     
   </header>
