--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,7 +4,7 @@ layout: page
 
 <article>
 
-  <p><strong>The {{ site.conference.name }} will take place in {{ site.conference.location }} from {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.</strong></p>
+  <p><strong>The {{ site.conference.name }} will be a virtual event {{ site.conference.location }} from {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.</strong></p>
 
   {{ content }}
 
