--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -90,7 +90,8 @@ layout: page
 
 
 
-      </div><!-- #content -->
+      </div><We are curretnly preparing the online format for the
+    Summer School>
     </div><!-- #primary -->
 
 
