minor change about.html

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,11 +7,9 @@ layout: page
   <p><strong>The {{ site.conference.name }} will be a virtual event {{ site.conference.location }} from {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.</strong></p>
 
   For the event, we will use Whova and Zoom. If you have already
-  registered, we will contact you close to the beginning of the
-  School with instructions about how to connect. 
-  
-  The summer school will include roundtable sessions with the speakers where participants can ask questions and interact with them.
-
+  resgistered, we will contact you close to the beginning of the
+  School with instructions about how to connect.
+  <br>
 
   {{ content }}
 
