minor change about.html

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,10 +6,11 @@ layout: page
 
   <p><strong>The {{ site.conference.name }} will be a virtual event {{ site.conference.location }} from {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.</strong></p>
 
-  For the event, we will use Whova and Zoom. If you have already
+  <p>For the event, we will use Whova and Zoom. If you have already
   resgistered, we will contact you close to the beginning of the
-  School with instructions about how to connect.
-  <br>
+  School with instructions about how to connect. The School will
+  include roundtable sessions with the speakers where participants can
+  interact with them.</p>
 
   {{ content }}
 
